--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,16 @@
-# 允许 Dockerfile 和 .env 文件
-!Dockerfile
-!.env
+# # 允许 Dockerfile 和 .env 文件
+# !Dockerfile
+# !.env
 
-# 允许 Go 源代码
-!*.go
+# # 允许 Go 源代码
+# !*.go
 
-# 允许 /cmd 中的文件
-!cmd/
+# # 允许 /cmd 中的文件
+# !cmd/
 
-# 允许 Go 模块文件
-!go.mod
-!go.sum
+# # 允许 Go 模块文件
+# !go.mod
+# !go.sum
 
 # 忽略不必要的文件和目录
 .git
